- Lambdas can be replaced with method reference - annotae @Nullable on params to clean warning 'should be replaced with Optional.of' - use tream.toList() to guarantee immutable lists, also much faster